# etl-1bilhao-de-linhas

./: .gitignore  README.md  create_measurements.py  etl_duckdb.py  etl_pandas.py  etl_python.py  pyproject.toml  requirements.txt
dashboard/: app.py
data/: measurements_summary.parquet
